--- a/app/src/main/res/layout/fragment_park.xml
+++ b/app/src/main/res/layout/fragment_park.xml
@@ -5,11 +5,18 @@
     android:orientation="vertical"
     tools:context="com.qhiehome.ihome.fragment.ParkFragment">
 
-    <FrameLayout
+    <com.baidu.mapapi.map.MapView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:id="@+id/mv_park"
+        android:clickable="true"
+        />
 
-    </FrameLayout>
+    <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1">-->
+
+    <!--</FrameLayout>-->
 
 </LinearLayout>
