--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_vertify"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:onClick="login"/>
+        />
+    <!--android:onClick="login"-->
 
     <EditText
         android:id="@+id/et_phone"
@@ -120,9 +121,11 @@
         android:layout_width="90dp"
         android:layout_height="48dp"
         android:text="获取"
-        android:onClick="verify"
+
         app:layout_constraintBaseline_toBaselineOf="@+id/et_vertify"
         android:layout_marginLeft="95dp"
         app:layout_constraintLeft_toLeftOf="@+id/et_vertify" />
+
+    <!--android:onClick="verify"-->
 
 </android.support.constraint.ConstraintLayout>
