--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="55dp"
-        android:text="手机号"
+        android:text="@string/login_mobile"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/tv_vertify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="验证码"
+        android:text="@string/login_verification"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/tv_phone"
@@ -36,7 +36,7 @@
         android:id="@+id/bt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登录"
+        android:text="@string/login"
         android:textSize="18sp"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
@@ -120,7 +120,7 @@
         android:id="@+id/bt_verify"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:text="获取"
+        android:text="@string/login_getVerification"
 
         app:layout_constraintBaseline_toBaselineOf="@+id/et_vertify"
         android:layout_marginLeft="95dp"
