delete edit fragment and add login interface

--- a/app/src/main/res/layout/layout_bottom.xml
+++ b/app/src/main/res/layout/layout_bottom.xml
@@ -22,20 +22,12 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_edit"
-        android:layout_width="0dp"
+        android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/tv_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="发布"
-            android:textSize="16sp"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
+        android:background="#383bdf"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        />
 
     <RelativeLayout
         android:id="@+id/rl_me"
