--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
     <string-array name="titles">
         <item>Account</item>
         <item>Binding Lock</item>
+        <item>Release</item>
         <item>My Orders</item>
         <item>About</item>
         <item>Logout</item>
