--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -8,4 +8,8 @@
         <item>关于App</item>
         <item>退出登录</item>
     </string-array>
+
+    <string-array name="time">
+
+    </string-array>
 </resources>
