--- a/app/src/main/res/layout/item_parking_list.xml
+++ b/app/src/main/res/layout/item_parking_list.xml
@@ -5,27 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="60dp">
 
+
     <TextView
         android:id="@+id/tv_parking_name"
-        android:layout_width="197dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="27dp"
+        android:layout_width="167dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="16dp"
+        android:gravity="center_vertical"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.166" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_parking_time"
-        android:layout_width="150dp"
-        android:layout_height="19dp"
+        android:layout_width="104dp"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
         android:text="TextView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_parking_name"
+        android:layout_marginRight="81dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <CheckBox
+        android:id="@+id/cb_parking"
+        android:layout_width="42dp"
+        android:layout_height="36dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="7dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.142"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_parking_name" />
+        app:layout_constraintLeft_toRightOf="@+id/tv_parking_time"
+        android:layout_marginLeft="8dp" />
 </android.support.constraint.ConstraintLayout>
