--- a/app/src/main/res/layout/item_user_info_list.xml
+++ b/app/src/main/res/layout/item_user_info_list.xml
@@ -27,6 +27,7 @@
         android:layout_marginStart="32dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:layout_marginEnd="16dp"
         />
 
     <ImageView
