--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -20,7 +20,7 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl_order_list"
-        android:layout_width="390dp"
+        android:layout_width="match_parent"
         android:layout_height="597dp"
         android:layout_marginBottom="0dp"
         android:layout_marginEnd="8dp"
