--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_order_estate"
         android:layout_width="128dp"
         android:layout_height="25dp"
-        android:layout_marginLeft="71dp"
+        android:layout_marginLeft="95dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/tv_order_time"
-        android:layout_width="331dp"
+        android:layout_width="160dp"
         android:layout_height="25dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,9 @@
         app:layout_constraintVertical_bias="0.0"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="72dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.37" />
 
     <TextView
         android:id="@+id/tv_order_fee"
