--- a/app/src/main/res/layout/item_parking_list.xml
+++ b/app/src/main/res/layout/item_parking_list.xml
@@ -7,25 +7,18 @@
 
 
     <TextView
-        android:id="@+id/tv_parking_name"
-        android:layout_width="167dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="16dp"
-        android:gravity="center_vertical"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tv_parking_time"
-        android:layout_width="104dp"
-        android:layout_height="40dp"
+        android:layout_width="210dp"
+        android:layout_height="43dp"
         android:gravity="center_vertical"
         android:text="TextView"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_parking_name"
         android:layout_marginRight="81dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.206" />
 
     <CheckBox
         android:id="@+id/cb_parking"
@@ -36,5 +29,6 @@
         android:layout_marginRight="7dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/tv_parking_time"
-        android:layout_marginLeft="8dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.743" />
 </android.support.constraint.ConstraintLayout>
