--- a/app/src/main/res/layout/fragment_park.xml
+++ b/app/src/main/res/layout/fragment_park.xml
@@ -32,4 +32,14 @@
         android:layout_toStartOf="@+id/btn_map_location"
         android:text="Navi" />
 
+    <Button
+        android:id="@+id/btn_map_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        android:text="Refresh"
+        android:layout_alignBaseline="@+id/btn_map_navi"
+        android:layout_alignBottom="@+id/btn_map_navi"
+        android:layout_toStartOf="@+id/btn_map_navi" />
+
 </RelativeLayout>
