--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="titles">
         <item>用户</item>
-        <item>绑定车位锁</item>
+        <item>我的预约</item>
         <item>发布</item>
         <item>历史订单</item>
         <item>关于App</item>
