--- a/app/src/main/res/layout/activity_publish_parking.xml
+++ b/app/src/main/res/layout/activity_publish_parking.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:fabSize="auto"
+        android:clickable="false"
         android:src="@android:drawable/ic_input_add"
         android:layout_gravity="bottom|right"
         />
