--- a/app/src/main/res/layout/item_rv_lock.xml
+++ b/app/src/main/res/layout/item_rv_lock.xml
@@ -55,6 +55,15 @@
             android:textSize="16sp"
             />
 
+        <Button
+            android:id="@+id/bt_modify_pwd"
+            android:text="修改密码"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_rental_status"
+            android:layout_alignEnd="@id/tv_rental_status"
+            />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
