--- a/app/src/main/res/layout/activity_parking_list.xml
+++ b/app/src/main/res/layout/activity_parking_list.xml
@@ -22,7 +22,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_parking"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,7 +30,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tb_parking"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintHorizontal_bias="1.0" />
 
@@ -48,5 +47,44 @@
         app:layout_constraintLeft_toLeftOf="@+id/tb_parking"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tb_parking"
-        tools:layout_editor_absoluteY="2dp" />
+        android:layout_marginStart="8dp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:background="@color/white"
+        android:id="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/tv_parking_guarfee"
+        android:layout_width="243dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:gravity="center_vertical"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        android:layout_marginTop="8dp" />
+
+    <Button
+        android:id="@+id/btn_parking_reserve"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="确认预约"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_parking_guarfee"
+        app:layout_constraintLeft_toRightOf="@+id/tv_parking_guarfee"
+        app:layout_constraintRight_toRightOf="@+id/imageView" />
 </android.support.constraint.ConstraintLayout>
