--- a/app/src/main/res/layout/fragment_park.xml
+++ b/app/src/main/res/layout/fragment_park.xml
@@ -42,4 +42,15 @@
         android:layout_alignBottom="@+id/btn_map_navi"
         android:layout_toStartOf="@+id/btn_map_navi" />
 
+    <Button
+        android:id="@+id/btn_map_marker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="167dp"
+        android:text="显示单价" />
+
+
 </RelativeLayout>
