--- a/app/src/main/res/layout/item_reserve_list.xml
+++ b/app/src/main/res/layout/item_reserve_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="120dp">
 
 
     <TextView
@@ -13,29 +13,43 @@
         android:layout_marginLeft="16dp"
         android:gravity="center_vertical"
         android:text="TextView"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.162" />
 
     <TextView
         android:id="@+id/tv_reserve_time"
         android:layout_width="133dp"
         android:layout_height="47dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginRight="240dp"
         android:gravity="center_vertical"
         android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.538" />
+        app:layout_constraintVertical_bias="0.904" />
 
     <Button
         android:id="@+id/btn_reserve_navi"
-        android:layout_width="70dp"
+        android:layout_width="90dp"
         android:layout_height="43dp"
         android:layout_marginRight="16dp"
         android:text="导航"
         android:textSize="14sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_estate"
+        tools:layout_editor_absoluteX="305dp" />
+
+    <Button
+        android:id="@+id/btn_reserve_cancel"
+        android:layout_width="90dp"
+        android:layout_height="43dp"
+        android:layout_marginRight="16dp"
+        android:text="取消预约"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_time"
-        app:layout_constraintRight_toRightOf="parent" />
+        tools:layout_editor_absoluteX="305dp" />
 </android.support.constraint.ConstraintLayout>
