--- a/app/src/main/res/layout/item_reserve_list.xml
+++ b/app/src/main/res/layout/item_reserve_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="160dp">
 
 
     <TextView
@@ -80,5 +80,34 @@
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toRightOf="@+id/tv_reserve_time"
         android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/btn_reserve_map"
+        android:layout_width="90dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="8dp"
+        android:text="小区地图"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_reserve_lock"
+        app:layout_constraintLeft_toRightOf="@+id/tv_reserve_estate"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintRight_toLeftOf="@+id/btn_reserve_navi"
+        android:layout_marginRight="8dp" />
+
+    <Button
+        android:id="@+id/btn_reserve_lock"
+        android:layout_width="90dp"
+        android:layout_height="43dp"
+        android:text="车位锁"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.504"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/btn_reserve_map"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/btn_reserve_map"
+        app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
