--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,44 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/slight_gray"
     tools:context="com.qhiehome.ihome.activity.UserInfoActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_userinfo"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"/>
+        android:theme="@style/toolbar_theme">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_userinfo"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tb_userinfo"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我的车位"
-        android:paddingTop="16dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorAccent"
-        />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_userinfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
-    <ViewStub
-        android:id="@+id/vs_user_locks"
-        android:layout="@layout/rv_user_locks"
-        android:inflatedId="@+id/rv_user_locks"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我的车位"
+            android:paddingTop="16dp"
+            android:paddingBottom="4dp"
+            android:paddingLeft="8dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            />
 
-</LinearLayout>
+        <ViewStub
+            android:id="@+id/vs_user_locks"
+            android:layout="@layout/rv_user_locks"
+            android:inflatedId="@+id/rv_user_locks"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
