--- a/app/src/main/res/layout/layout_bottom.xml
+++ b/app/src/main/res/layout/layout_bottom.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray">
+    android:background="?attr/colorPrimary">
 
     <RelativeLayout
         android:id="@+id/rl_park"
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:text="我"
             android:textSize="16sp"
+            android:textColor="@color/white"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
