--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/light_gray</color>
-    <color name="colorPrimaryDark">@color/black</color>
+    <color name="colorPrimary">@color/light_blue</color>
+    <color name="colorPrimaryDark">@color/dark_blue</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#666666</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
     <color name="light_gray">#dadada</color>
     <color name="slight_gray">#f2f0f0</color>
+    <color name="light_blue">#2e8abb</color><!-- 浅蓝色 -->
+    <color name="dark_blue">#3A5FCD</color>
 </resources>
