--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,4 +15,13 @@
         <item>About</item>
         <item>Quit</item>
     </string-array>
+
+    <string-array name="cities">
+        <item>北京</item>
+        <item>广州</item>
+        <item>深圳</item>
+        <item>上海</item>
+        <item>杭州</item>
+        <item>成都</item>
+    </string-array>
 </resources>
