--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -5,13 +5,22 @@
     android:background="?attr/colorPrimary"
     android:padding="8dp">
 
-    <org.angmarch.views.NiceSpinner
-        android:id="@+id/spinner_city"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    <TextView
+        android:id="@+id/tv_current_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="当前城市: "
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="16dp"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        />
+        android:src="@drawable/spinner_arrow"/>
 
     <RelativeLayout
         android:id="@+id/rl_input_location"
@@ -24,6 +33,7 @@
         android:padding="2dp">
 
         <ImageView
+            android:id="@+id/iv_input_location"
             android:contentDescription="input parking location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
