feat(ParkFragment): add select city

--- a/app/src/main/res/layout/layout_bottom.xml
+++ b/app/src/main/res/layout/layout_bottom.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="附近空车位"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_centerInParent="true"/>
 
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="我"
             android:textSize="16sp"
-            android:textColor="@color/white"
+            android:textColor="@color/light_gray"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
