--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorPrimary" />
+    <item android:drawable="@color/white" />
     <item>
         <bitmap
-            android:src="@mipmap/ic_launcher_car"
+            android:src="@mipmap/ic_launcher_logo"
             android:gravity="center"
             />
     </item>
