--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -30,15 +30,9 @@
             android:id="@+id/ev_feedback"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="95dp"
             android:textSize="14sp"
             android:hint="请留下您的宝贵意见"
             android:textColorHint="@android:color/darker_gray"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             />
 
         <Button
@@ -46,14 +40,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="提交"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="46dp"
-            app:layout_constraintTop_toBottomOf="@+id/ev_feedback"
-            app:layout_constraintHorizontal_bias="0.498"
+            android:layout_below="@id/ev_feedback"
             />
 
     </RelativeLayout>
-
 
 </android.support.design.widget.CoordinatorLayout>
