--- a/app/src/main/res/layout/dialog_about_app.xml
+++ b/app/src/main/res/layout/dialog_about_app.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher_car"
+        android:src="@mipmap/ic_launcher_logo"
         android:layout_marginTop="16dp"
         />
 
