--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
-    android:background="#fff">
-
+    android:background="@color/colorPrimary">
 
     <TextView
         android:id="@+id/tv_phone"
@@ -14,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="55dp"
         android:text="@string/login_mobile"
-        android:textColor="#000"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_verification"
-        android:textColor="#000"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/tv_phone"
         android:layout_marginTop="32dp"
@@ -38,6 +37,7 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:textSize="18sp"
+        android:textColor="#000"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
         android:layout_marginRight="8dp"
@@ -58,12 +58,10 @@
         android:id="@+id/et_phone"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="33dp"
         android:ems="10"
         android:textSize="18sp"
-        android:textColor="#000"
+        android:textColor="@color/white"
         android:textCursorDrawable="@null"
-        android:background="#FFF"
         android:inputType="phone"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_phone"
         app:layout_constraintLeft_toRightOf="@+id/tv_phone"
@@ -76,8 +74,7 @@
         android:layout_marginRight="8dp"
         android:ems="10"
         android:textSize="18sp"
-        android:background="#FFF"
-        android:textColor="#000"
+        android:textColor="@color/white"
         android:textCursorDrawable="@null"
         android:inputType="numberDecimal"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_vertify"
@@ -86,7 +83,7 @@
         app:layout_constraintRight_toRightOf="@+id/et_phone"
         android:layout_marginEnd="8dp" />
 
-    <LinearLayout
+    <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginLeft="16dp"
@@ -99,9 +96,9 @@
         app:layout_constraintTop_toBottomOf="@+id/et_phone"
         app:layout_constraintBottom_toTopOf="@+id/et_vertify"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"></LinearLayout>
+        android:layout_marginEnd="16dp"/>
 
-    <LinearLayout
+    <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:orientation="horizontal"
@@ -114,16 +111,16 @@
         app:layout_constraintBottom_toTopOf="@+id/bt_login"
         app:layout_constraintVertical_bias="0.184"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"></LinearLayout>
+        android:layout_marginRight="16dp"
+        />
 
     <Button
         android:id="@+id/bt_verify"
         android:layout_width="90dp"
         android:layout_height="48dp"
         android:text="@string/login_getVerification"
-
         app:layout_constraintBaseline_toBaselineOf="@+id/et_vertify"
-        android:layout_marginLeft="95dp"
+        android:layout_marginStart="95dp"
         app:layout_constraintLeft_toLeftOf="@+id/et_vertify" />
 
     <!--android:onClick="verify"-->
