--- a/app/src/main/res/layout/item_reserve_list.xml
+++ b/app/src/main/res/layout/item_reserve_list.xml
@@ -1,113 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp">
-
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_reserve_estate"
-        android:layout_width="155dp"
-        android:layout_height="47dp"
-        android:layout_marginLeft="16dp"
-        android:gravity="center_vertical"
-        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="BUPT"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.162" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="16dp"
+        />
 
     <TextView
         android:id="@+id/tv_reserve_time"
-        android:layout_width="133dp"
-        android:layout_height="47dp"
-        android:layout_marginRight="240dp"
-        android:gravity="center_vertical"
-        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="18:45 ~ 19:00"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.904" />
-
-    <Button
-        android:id="@+id/btn_reserve_pay"
-        android:layout_width="90dp"
-        android:layout_height="43dp"
-        android:layout_marginRight="8dp"
-        android:text="支付"
-        android:textSize="14sp"
-        app:layout_constraintRight_toRightOf="@+id/btn_reserve_navi"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.506"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_reserve_navi"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_below="@id/tv_reserve_estate"
+        android:layout_margin="16dp"
+        />
 
     <Button
         android:id="@+id/btn_reserve_navi"
-        android:layout_width="90dp"
-        android:layout_height="43dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="导航"
         android:textSize="14sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_estate"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="305dp" />
-
-    <Button
-        android:id="@+id/btn_reserve_cancel"
-        android:layout_width="90dp"
-        android:layout_height="43dp"
-        android:layout_marginRight="16dp"
-        android:text="取消预约"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_time"
-        tools:layout_editor_absoluteX="305dp" />
-
-    <TextView
-        android:id="@+id/tv_reserve_fee"
-        android:layout_width="110dp"
-        android:layout_height="45dp"
-        android:gravity="center_vertical"
-        android:text="TextView"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_time"
-        app:layout_constraintRight_toLeftOf="@+id/btn_reserve_cancel"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/tv_reserve_time"
-        android:layout_marginLeft="8dp" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="6dp"
+        />
 
     <Button
         android:id="@+id/btn_reserve_map"
-        android:layout_width="90dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="小区地图"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_reserve_lock"
-        app:layout_constraintLeft_toRightOf="@+id/tv_reserve_estate"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintRight_toLeftOf="@+id/btn_reserve_navi"
-        android:layout_marginRight="8dp" />
+        android:textSize="14sp"
+        android:layout_toStartOf="@id/btn_reserve_navi"
+        android:layout_alignBaseline="@id/btn_reserve_navi"
+        />
 
     <Button
         android:id="@+id/btn_reserve_lock"
-        android:layout_width="90dp"
-        android:layout_height="43dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="车位锁"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.504"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_reserve_map"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/btn_reserve_map"
-        app:layout_constraintHorizontal_bias="1.0" />
+        android:textSize="14sp"
+        android:layout_toStartOf="@id/btn_reserve_map"
+        android:layout_alignBaseline="@id/btn_reserve_map"
+        android:layout_marginEnd="8dp"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_reserve_fee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="$12"
+        android:textSize="18sp"
+        android:layout_toEndOf="@id/tv_reserve_time"
+        android:layout_alignBottom="@id/tv_reserve_time"
+        />
+
+    <Button
+        android:id="@+id/btn_reserve_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="取消预约"
+        android:textSize="14sp"
+        android:layout_below="@id/btn_reserve_navi"
+        android:layout_alignEnd="@id/btn_reserve_navi"
+        />
+
+    <Button
+        android:id="@+id/btn_reserve_pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="支付"
+        android:textSize="14sp"
+        android:layout_alignBaseline="@id/btn_reserve_cancel"
+        android:layout_alignStart="@id/btn_reserve_map"
+        />
+
+</RelativeLayout>
