--- a/app/src/main/res/layout/layout_bottom.xml
+++ b/app/src/main/res/layout/layout_bottom.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="我"
             android:textSize="16sp"
-            android:textColor="@color/light_gray"
+            android:textColor="@color/gray"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
