--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/light_green</color>
     <color name="colorPrimaryDark">@color/dark_green</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">@color/light_green</color>
     <color name="gray">#666666</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
