--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,4 +24,9 @@
         <item>杭州</item>
         <item>成都</item>
     </string-array>
+
+    <string-array name="avatar_items">
+        <item>拍照</item>
+        <item>相册</item>
+    </string-array>
 </resources>
