--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -53,8 +53,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:src="@drawable/ic_avatar_default"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/white"
@@ -66,13 +66,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
-        android:paddingTop="48dp"
+        android:paddingTop="36dp"
         android:text="19283747383"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_anchor="@id/iv_avatar"
         app:layout_anchorGravity="bottom|center_horizontal"
         />
+
+    <TextView
+        android:id="@+id/tv_balance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:paddingTop="36dp"
+        android:text="余额：0.00元"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_anchor="@id/tv_phoneNum"
+        app:layout_anchorGravity="bottom|center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
