--- a/app/src/main/res/layout/item_rv_publish_parking.xml
+++ b/app/src/main/res/layout/item_rv_publish_parking.xml
@@ -29,4 +29,15 @@
         android:layout_marginStart="16dp"
         />
 
+    <ImageView
+        android:id="@+id/iv_callback_publish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_delete"
+        android:layout_alignParentEnd="true"
+        android:padding="12dp"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="4dp"
+        />
+
 </RelativeLayout>
