--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -4,7 +4,7 @@
         <item>用户</item>
         <item>我的预约</item>
         <item>发布</item>
-        <item>历史订单</item>
+        <!--<item>历史订单</item>-->
         <item>设置</item>
     </string-array>
 
