--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="purple_end_color">#925eff</color>
     <color name="light_purple">#917fF2</color>
     <color name="dark_green">#28a746</color>
+    <color name="pale_green">#66CD00</color>
 </resources>
