--- a/app/src/main/res/drawable/bg_purple.xml
+++ b/app/src/main/res/drawable/bg_purple.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="@color/purple_end_color"
-        android:startColor="@color/purple_start_color"/>
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/pale_green"/>
 </shape>
