--- a/app/src/main/res/layout/item_parking_timeline.xml
+++ b/app/src/main/res/layout/item_parking_timeline.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/pop_left">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/tv_parking_timeline_time"
@@ -11,8 +10,8 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="哈哈哈哈哈哈哈哈"
-        android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
